modified the  html and javascript code

--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 <body>
     <form action="" class="form-field">
         <label for="input-field">SEARCH</label>
-         <input type="text" name="" id="input-field"placeholder= "Enter numbers" onfocus="this.value=''" >
+         <input type="text" name="" id="input-field"placeholder= "Enter numbers">
          <div class="btn">
             <button class="even-num-btn">Search Even numbers</button>
             <button class="odd-num-btn">Search Odd numbers</button>
-            <br>
-            <button class="Clear-field-btn">Clear Field</button>
+            
          </div>
 
     </form>
